[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Carlos Carral C. <carloscarral13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "0.1.70"
simple-error = "0.2.2"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 0 
debug = true

[profile.test]
opt-level = 0 
debug = 2
